added stroke and new path

--- a/index.html
+++ b/index.html
@@ -1,39 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LC Troop logo - SVG</title>
-    <link rel="stylesheet" href="css/styles.css" />
-    <link
-      rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
-    />
-    <script src="https://use.fontawesome.com/4e224b331b.js"></script>
-  </head>
-  <body>
-    <div class="logo">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        width="417"
-        height="953"
-        viewBox="0 0 417 953"
-        version="1.1"
-      >
-        <path
-          d="M 14.595 21.290 C 14.252 32.956, 10.890 245.225, 7.124 493 C 3.358 740.775, 0.200 945.639, 0.107 948.252 L -0.063 953.005 208.718 952.752 L 417.500 952.500 417.338 930.500 C 417.249 918.400, 416.735 888.700, 416.195 864.500 C 415.656 840.300, 415.166 817.947, 415.107 814.826 L 415 809.151 405.750 814.003 C 393.369 820.497, 382.789 824.584, 370.060 827.790 C 360.828 830.115, 357.488 830.451, 343.500 830.460 C 326.268 830.471, 319.162 829.142, 306.496 823.540 C 269.266 807.076, 242.792 759.794, 230.604 688 C 224.589 652.571, 222.587 624.436, 222.561 575 C 222.539 535.090, 223.165 522.874, 226.554 497 C 234.641 435.253, 254.770 394.402, 284.867 378.654 C 297.301 372.149, 304.646 370.498, 321 370.534 C 333.297 370.561, 337.095 370.968, 346 373.212 C 358.552 376.374, 370.396 380.855, 386.175 388.410 C 392.596 391.484, 397.996 394, 398.175 394 C 398.354 394, 398.275 370.038, 398 340.750 L 397.500 287.500 387.065 282.341 C 368.585 273.206, 342.844 265.896, 319 263.012 C 305.181 261.340, 275.672 261.602, 262 263.517 C 228.895 268.154, 196.152 279.439, 166.761 296.342 L 159.022 300.793 159.572 210.146 L 160.121 119.500 96.438 67 C 61.412 38.125, 28.809 11.256, 23.987 7.290 L 15.219 0.080 14.595 21.290 M 0.411 927 C 0.411 936.625, 0.561 940.563, 0.745 935.750 C 0.928 930.938, 0.928 923.063, 0.745 918.250 C 0.561 913.438, 0.411 917.375, 0.411 927 M 0.232 950 C 0.232 951.925, 0.438 952.712, 0.689 951.750 C 0.941 950.788, 0.941 949.212, 0.689 948.250 C 0.438 947.288, 0.232 948.075, 0.232 950"
-          stroke="none"
-          fill="#ffffff"
-          fill-rule="evenodd"
-        />
-        <path d="" stroke="none" fill="#ffffff" fill-rule="evenodd" />
-      </svg>
-    </div>
-    <h1><span>-</span> COMING SOON <span>-</span></h1>
-    <h2>STAY TUNED</h2>
-    <div class="arrow">
-      <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
-    </div>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>LC Troop logo - SVG</title>
+  <link rel="stylesheet" href="css/styles.css" />
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
+  <script src="https://use.fontawesome.com/4e224b331b.js"></script>
+</head>
+
+<body>
+  <div class="logo">
+    <svg id="logo-svg" xmlns="http://www.w3.org/2000/svg" width="417" height="953" viewBox="0 0 417 953" version="1.1"
+      overflow="visible">
+      <path
+        d="M 14.595 21.290 C 14.252 32.956, 10.890 245.225, 7.124 493 C 3.358 740.775, 0.200 945.639, 0.107 948.252 L -0.063 953.005 208.718 952.752 L 417.500 952.500 417.338 930.500 C 417.249 918.400, 416.735 888.700, 416.195 864.500 C 415.656 840.300, 415.166 817.947, 415.107 814.826 L 415 809.151 405.750 814.003 C 393.369 820.497, 382.789 824.584, 370.060 827.790 C 360.828 830.115, 357.488 830.451, 343.500 830.460 C 326.268 830.471, 319.162 829.142, 306.496 823.540 C 269.266 807.076, 242.792 759.794, 230.604 688 C 224.589 652.571, 222.587 624.436, 222.561 575 C 222.539 535.090, 223.165 522.874, 226.554 497 C 234.641 435.253, 254.770 394.402, 284.867 378.654 C 297.301 372.149, 304.646 370.498, 321 370.534 C 333.297 370.561, 337.095 370.968, 346 373.212 C 358.552 376.374, 370.396 380.855, 386.175 388.410 C 392.596 391.484, 397.996 394, 398.175 394 C 398.354 394, 398.275 370.038, 398 340.750 L 397.500 287.500 387.065 282.341 C 368.585 273.206, 342.844 265.896, 319 263.012 C 305.181 261.340, 275.672 261.602, 262 263.517 C 228.895 268.154, 196.152 279.439, 166.761 296.342 L 159.022 300.793 159.572 210.146 L 160.121 119.500 96.438 67 C 61.412 38.125, 28.809 11.256, 23.987 7.290 L 15.219 0.080 14.595 21.290"
+        stroke="#ffffff" stroke-width="2" fill="none" fill-rule="evenodd" />
+      <path d="" stroke="#ffffff" stroke-width="2" fill="#ffffff" fill-rule="evenodd" />
+    </svg>
+  </div>
+  <h1><span>-</span> COMING SOON <span>-</span></h1>
+  <h2>STAY TUNED</h2>
+  <div class="arrow">
+    <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
+  </div>
+  <script src="index.js" type="module"></script>
+</body>
+
 </html>
