Link anime.min.js

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <div class="arrow">
     <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
   </div>
+  <script src="anime.min.js"></script>
   <script src="index.js" type="module"></script>
 </body>
 
