--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <div class="arrow">
     <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
   </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <script src="index.js" type="module"></script>
 </body>
 
