--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       <path d="" stroke="#ffffff" stroke-width="2" fill="#ffffff" fill-rule="evenodd" />
     </svg>
   </div>
-  <h1><span>-</span> COMING SOON <span>-</span></h1>
-  <h2>STAY TUNED</h2>
+  <h1 id="comming-soon"><span>-</span> COMING SOON <span>-</span></h1>
+  <h2 id="stay-tuned">STAY TUNED</h2>
   <div class="arrow">
-    <i class="fa fa-long-arrow-down" aria-hidden="true"></i>
+    <i class="fa fa-long-arrow-down" id="arrows" aria-hidden="true"></i>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <script src="index.js" type="module"></script>
